5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1594_1801.log
== TEST (2019-04-04 12:55:59) 
-- CODE:
t=input("digite o fetiço: ")
n=input("repetiçoes: ")
print(abra + "t" * n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(abra + "t" * n)
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:56:07) 
-- CODE:
t=input("digite o fetiço: ")
n=input("repetiçoes: ")
print(abra + t * n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(abra + t * n)
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:02:14) 
-- CODE:
t=input("digite o fetiço: ")
n=input("repetiçoes: ")
print("abra" + " "+ t +" ")

-- OUTPUT:
abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:02:18) 
-- CODE:
t=input("digite o fetiço: ")
n=input("repetiçoes: ")
print("abra" + " "+ t +" ")

-- OUTPUT:
abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:02:20) 
-- CODE:
t=input("digite o fetiço: ")
n=input("repetiçoes: ")
print("abra" + " "+ t +" ")

-- OUTPUT:
abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:02:41) 
-- CODE:
t=input("digite o fetiço: ")
n=input("repetiçoes: ")
print("abra" + " "+ t +" ")*n

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print("abra" + " "+ t +" ")*n
TypeError: can't multiply sequence by non-int of type 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:03:52) 
-- CODE:
t=input("digite o fetiço: ")
n=int(input("repetiçoes: "))
print(("abra" + " "+ t +" ")*n)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:15) 
-- CODE:
t=input("digite o fetiço: ")
n=int(input("repetiçoes: "))
v=("abra")
s=(v + " "+ t+ " ") * n
print(s)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:17) 
-- CODE:
t=input("digite o fetiço: ")
n=int(input("repetiçoes: "))
v=("abra")
s=(v + " "+ t+ " ") * n
print(s)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:17) 
-- CODE:
t=input("digite o fetiço: ")
n=int(input("repetiçoes: "))
v=("abra")
s=(v + " "+ t+ " ") * n
print(s)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:18) 
-- CODE:
t=input("digite o fetiço: ")
n=int(input("repetiçoes: "))
v=("abra")
s=(v + " "+ t+ " ") * n
print(s)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:19) 
-- CODE:
t=input("digite o fetiço: ")
n=int(input("repetiçoes: "))
v=("abra")
s=(v + " "+ t+ " ") * n
print(s)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:06:19) 
-- CODE:
t=input("digite o fetiço: ")
n=int(input("repetiçoes: "))
v=("abra")
s=(v + " "+ t+ " ") * n
print(s)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:56:05) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print(("abra" + " " + t + " ")*n)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:22) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print(("abra" + " " + t + " ")*n)

-- EXECUTION TIME:
0.144648
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:56:46) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((()"abra") + " " + t + " ")*n)

-- EXECUTION TIME:
0.171703
-- ERROR:
  File "/home/codebench/codes/1594/1801/main.py", line 3
    print((()"abra") + " " + t + " ")*n)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:57:00) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((("abra") + " " + t + " ")*n)

-- EXECUTION TIME:
0.131503
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:57:27) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((("abra") + " " + t + " ")*n)

-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:58:39) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((("Abra") + " " + t + " ")*n)

-- EXECUTION TIME:
0.14061
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:58:56) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((("Abra") + " " + t + " ")*n)

-- EXECUTION TIME:
0.229409
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:58:56) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((("Abra") + " " + t + " ")*n)

-- EXECUTION TIME:
0.242037
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:58:57) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((("Abra") + " " + t + " ")*n)

-- EXECUTION TIME:
0.135226
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 15:59:06) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((("Abra") + " " + t + " ")*n)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 15:59:20) 
-- CODE:
t=input("digite o fetico: ")
n=int(input("repeticoes: "))
print((("Abra") + " " + t + " ")*n)

-- EXECUTION TIME:
0.139298
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
